--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,10 @@ a, a:hover{
     margin-top: 0.28rem;
     cursor: pointer;
 }
+
+.invisibile{
+    display: none!important;
+}
 /* Proprietà css generali */
 
 
@@ -44,11 +48,9 @@ a, a:hover{
 ::-webkit-scrollbar-thumb {
 	background-color: #99a1aa;
     opacity: 0.1;
-	border-radius: 7px;
 }
   
 ::-webkit-scrollbar-corner{
-	border-radius: 7px;
     opacity: 0.1;
 	background-color: #99a1aa;
 }
@@ -206,9 +208,9 @@ a, a:hover{
     padding: 100px 0px 60px 0px;
 }
 
-.title-name{
+/* .title-name{
     font-size: 50px;
-}
+} */
 
 .sotto-titolo{
     color: #99a1aa;
@@ -242,7 +244,7 @@ a, a:hover{
 
 .yellow-line-long-2{
     border-bottom: 3px solid #e2af27;
-    width: 280px;
+    width: 230px;
     margin-top: 2%;
     margin-bottom: 3%;
 }
@@ -278,13 +280,16 @@ a, a:hover{
 .blocco-skill-principali{
     background-color: #403e52;
     padding: 45px;
-    margin-top: -60px;
+    margin-top: -75px;
     color: white;
 }
 
 .blocchi-skill{
     background-color: #353547;
     padding: 15px 25px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .container-blocchi{
@@ -321,7 +326,7 @@ a, a:hover{
 }
 
 .title-name{
-    font-size: 35px;
+    font-size: 30px;
 }
 
 .sposta-sinistra{
@@ -373,8 +378,9 @@ a, a:hover{
 
 .crediti-finali{
     background-color: #403e52;
-    padding: 5px;
+    padding: 7px;
     color: white;
+    text-align: center;
 }
 /* Fine footer */
 
@@ -389,6 +395,7 @@ a, a:hover{
     background-color: #363543;
     padding: 20px;
     margin-top: 40px;
+    transition: 0.5s;
 }
 
 .contenitore-progetti-dev{
@@ -397,6 +404,7 @@ a, a:hover{
 
 .testo-progetti-tit{
     color: #99a1aa;
+    margin-bottom: 15px;
 }
 /* Fine body progetti */
 
@@ -414,7 +422,7 @@ a, a:hover{
 .barra{
     background-color: #e8edf5;
     width: 100%;
-    height: 6px;
+    height: 8px;
 }
 
 .percentuale-frame{
@@ -433,8 +441,8 @@ a, a:hover{
 .completamento10 {
     width: 0;
     background-color: #4668a2;
-    height: 6px;
-    margin-top: -6px;
+    height: 8px;
+    margin-top: -8px;
     transition: width 3s ease;
 }
 
@@ -498,8 +506,8 @@ a, a:hover{
 
 @keyframes fillJs {
     0% { width: 0; }
-    80% { width: 80%; }
-    100% { width: 80%; }
+    90% { width: 90%; }
+    100% { width: 90%; }
 }
 
 @keyframes fillReact {
@@ -528,8 +536,8 @@ a, a:hover{
 
 @keyframes fillSql {
     0% { width: 0; }
-    40% { width: 40%; }
-    100% { width: 40%; }
+    90% { width: 90%; }
+    100% { width: 90%; }
 }
 
 @keyframes fillFirebase {
