--- a/css/style.css
+++ b/css/style.css
@@ -388,6 +388,7 @@ a, a:hover{
     border-top: 1px solid #403e52;
     background-color: #363543;
     padding: 8px;
+    padding-bottom: 58px;
     color: white;
     text-align: center;
 }
@@ -581,7 +582,7 @@ a, a:hover{
     position: fixed;
     bottom: 15px;
     right: 15px;
-    width: 38px;
+    width: 40px;
     height: 40px;
     border: none;
     background-color: #e8edf5;
