--- a/css/style.css
+++ b/css/style.css
@@ -385,8 +385,10 @@ a, a:hover{
 }
 
 .crediti-finali{
-    background-color: #403e52;
-    padding: 6px;
+    border-top: 1px solid #403e52;
+    background-color: #363543;
+    padding: 10px;
+    padding-bottom: 58px;
     color: white;
     text-align: center;
 }
@@ -578,10 +580,10 @@ a, a:hover{
 /* INIZIO BOTTONE SCROLLA SU */
 #scrollToTopBtn {
     position: fixed;
-    bottom: 20px;
-    right: 20px;
-    width: 50px;
-    height: 50px;
+    bottom: 15px;
+    right: 15px;
+    width: 42px;
+    height: 40px;
     border: none;
     background-color: #e8edf5;
     color: #4668a2;
