--- a/css/style.css
+++ b/css/style.css
@@ -261,7 +261,7 @@ a, a:hover{
 }
 
 .more{
-    color: #9a7115!important;
+    color: #e2af27!important;
 }
 
 .social{
@@ -273,8 +273,8 @@ a, a:hover{
 }
 
 .posizione{
-    margin-top: -11px;
-    margin-left: -9.5px;
+    margin-top: -10.5px;
+    margin-left: -9.8px;
 }
 /* Fine sotto navbar */
 
@@ -380,7 +380,7 @@ a, a:hover{
 /* Inizio footer */
 .contenitore-mio-footer{
     background-color: #363543;
-    padding: 20px;
+    padding: 15px;
     color: white;
 }
 
