--- a/css/style.css
+++ b/css/style.css
@@ -417,6 +417,7 @@ a, a:hover{
     display: flex;
     flex-direction: column;
 
+    border: 1px solid #99a1aa;
     background-color: #363543;
     padding: 20px;
     margin-top: 40px;
@@ -431,6 +432,30 @@ a, a:hover{
 .testo-progetti-tit{
     color: #99a1aa;
     margin-bottom: 15px;
+}
+
+.nome-tecno{
+    color: #fff;
+    font-weight: 700;
+    font-size: 15px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+}
+
+.pallino-tecnologia{
+    border-radius: 100%;
+    height: 6px;
+    width: 6px;
+    margin-right: 6px;
+}
+
+@media only screen and (min-width: 368px) and (max-width: 575px){
+    .col-mia-4{
+        -webkit-box-flex: 0;
+        -ms-flex: 0 0 33.333333%;
+        flex: 0 0 33.333333%;
+        max-width: 33.333333%;
+    }
 }
 /* Fine body progetti */
 
