--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,12 @@ a, a:hover{
 .invisibile{
     display: none!important;
 }
+
+.tog-mp{
+    margin: 0!important;
+    padding: 0!important;
+    box-sizing: border-box!important;
+}
 /* Proprietà css generali */
 
 
@@ -449,7 +455,7 @@ a, a:hover{
     margin-right: 6px;
 }
 
-@media only screen and (min-width: 409px) and (max-width: 575px){
+@media only screen and (min-width: 410px) and (max-width: 575px){
     .col-mia-4{
         -webkit-box-flex: 0;
         -ms-flex: 0 0 33.333333%;
